--- a/css/style.css
+++ b/css/style.css
@@ -13,5 +13,10 @@ header{
     left: 0;
     width: 100%;
     padding: 20px 100px;
-    
+    background: red;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 99;
+
 }
