--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ header{
     top: 0;
     left: 0;
     width: 100%;
-    padding: 20px 100px;
+    padding: 20px ;
     background: red;
     display: flex;
     justify-content: space-between;
