--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,16 @@ header{
     left: 0;
     width: 100%;
     padding: 20px ;
-    background: red;
+    background: rgb(27, 126, 96);
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 99;
 
+}
+
+.logo{
+    font-size: 2em;
+    color: white;
+    user-select: none;
 }
