--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,9 @@ header{
     color: white;
     user-select: none;
 }
+
+.navigation a{
+    position: relative;
+    font-size: 1.1em;
+    color: rgb(255, 255, 255);
+}
