--- a/css/style.css
+++ b/css/style.css
@@ -31,4 +31,8 @@ header{
     position: relative;
     font-size: 1.1em;
     color: rgb(255, 255, 255);
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 5px;
+
 }
