--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,15 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: url(../h/img/background.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+}
 
 header{
     position: fixed;
@@ -13,7 +22,6 @@ header{
     left: 0;
     width: 100%;
     padding: 20px ;
-    background: rgb(27, 126, 96);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -35,4 +43,23 @@ header{
     font-weight: 500;
     margin-left: 5px;
 
+}
+
+.navigation a::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 100%;
+    height: 3px;
+    background: white;
+    border-radius: 5px;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .5s;
+}
+
+.navigation a:hover::after{
+    transform-origin: left;
+    transform: scaleX(1);
 }
