--- a/css/style.css
+++ b/css/style.css
@@ -21,17 +21,20 @@ header{
     top: 0;
     left: 0;
     width: 100%;
-    padding: 20px ;
+    padding: 15px ;
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 99;
+    border: 2px solid rgba(255, 255, 255, 0.466);
+    border-radius: 2px;
+    backdrop-filter: blur(10px);
 
 }
 
 .logo{
     font-size: 2em;
-    color: white;
+    color: rgb(161, 229, 250);
     user-select: none;
 }
 
@@ -40,8 +43,8 @@ header{
     font-size: 1.1em;
     color: rgb(255, 255, 255);
     text-decoration: none;
-    font-weight: 500;
-    margin-left: 5px;
+    font-weight: 400;
+    margin-left: 30px;
 
 }
 
@@ -56,7 +59,7 @@ header{
     border-radius: 5px;
     transform-origin: right;
     transform: scaleX(0);
-    transition: transform .5s;
+    transition: transform .4s;
 }
 
 .navigation a:hover::after{
