--- a/css/style.css
+++ b/css/style.css
@@ -1,80 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins');
-@import url('https://fonts.googleapis.com/css?family=SecularOne');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: url(../img/background.jpg) no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-
-header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 15px ;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 99;
-    border: 2px solid rgba(255, 255, 255, 0.466);
-    border-radius: 2px;
-    backdrop-filter: blur(10px);
-
-}
-
-.logo{
-    font-size: 2em;
-    color: rgb(161, 229, 250);
-    user-select: none;
-}
-
-.navigation a{
-    position: relative;
-    font-size: 1.1em;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    font-weight: 400;
-    margin-left: 10px;
-
-}
-
-.navigation a::after{
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    width: 100%;
-    height: 3px;
-    background: white;
-    border-radius: 5px;
-    transform-origin: right;
-    transform: scaleX(0);
-    transition: transform .4s;
-}
-
-.navigation a:hover::after{
-    transform-origin: left;
-    transform: scaleX(1);
-}
-
-.countdown section{
-    color: rgb(253, 0, 0);
-    font-family: 'SecularOne';
-}
-
-.timeout{
-    color: rgb(19, 62, 255);
-    font-family: 'Poppins';
-}
+@import url('https://fonts.googleapis.com/css?family=Poppins');@import url('https://fonts.googleapis.com/css?family=SecularOne');*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif}body{display:flex;justify-content:center;align-items:center;min-height:100vh;background:url(../img/background.jpg) no-repeat;background-size:cover;background-position:center}header{position:fixed;top:0;left:0;width:100%;padding:15px;display:flex;justify-content:space-between;align-items:center;z-index:99;border:2px
+    solid rgba(255,255,255,0.466);border-radius:2px;backdrop-filter:blur(10px)}.logo{font-size:2em;color:rgb(161, 229, 250);user-select:none}.navigation
+    a{position:relative;font-size:1.1em;color:rgb(255, 255, 255);text-decoration:none;font-weight:400;margin-left:10px}.navigation a::after{content:'';position:absolute;left:0;bottom:-6px;width:100%;height:3px;background:white;border-radius:5px;transform-origin:right;transform:scaleX(0);transition:transform .4s}.navigation a:hover::after{transform-origin:left;transform:scaleX(1)}.countdown
+    section{color:rgb(253,0,0);font-family:'SecularOne'}.timeout{color:rgb(19, 62, 255);font-family:'Poppins'}
