--- a/css/download.css
+++ b/css/download.css
@@ -79,3 +79,18 @@ header {
     color: rgb(11, 46, 0);
     font-size: 1.7em
 }
+
+.btnd p{
+    color: red;
+    font-size: 1.1em;
+}
+
+.btnd h3{
+    font-size: 1.7em;
+}
+.btnd{
+    position: fixed;
+    margin: 0;
+    left: 1em;
+    top: 19em;
+}
