--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ header {
     justify-content: space-between;
     align-items: center;
     z-index: 99;
+    border-radius: 20px;
     backdrop-filter: blur(2px)
 }
 .logo {
