--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif, monospace
+    font-family: 'Poppins', 'Comic Sans MS', sans-serif, monospace
 }
 body {
     display: flex;
