--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 @import url('https://fonts.googleapis.com/css?family=Secular One');
 @import url('https://fonts.googleapis.com/css?family=Shadows Into Light');
+@import url('https://fonts.googleapis.com/css?family=Comic Sans MS');
 * {
     margin: 0;
     padding: 0;
@@ -17,6 +18,7 @@ body {
     background-position: center
 }
 header {
+    font-family: 'Poppins';
     position: fixed;
     top: 0;
     left: 0;
