--- a/css/videos.css
+++ b/css/videos.css
@@ -1,5 +1,9 @@
 *{
     font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background: linear-gradient(blue pink);
 }
 
 button{
@@ -11,4 +15,8 @@ button{
     border-radius: 12px;
     padding: 10px;
     cursor: pointer;
+}
+
+iframe{
+    margin-left: auto;
 }
