--- a/css/videos.css
+++ b/css/videos.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background: rgb(2, 0, 36);
     background: linear-gradient(blue pink);
 }
 
