--- a/css/download.css
+++ b/css/download.css
@@ -66,13 +66,13 @@ header {
 .links a {
     text-decoration: none;
     font-size: 1.3em;
-    color: rgb(245, 241, 0)
+    color: rgb(108, 223, 0)
 }
 .links a:hover {
     color: rgb(44, 199, 238)
 }
 .links a:visited {
-    color: rgb(174, 204, 5)
+    color: rgb(5, 204, 65)
 }
 .links h3 {
     color: rgb(212, 0, 0);
@@ -86,10 +86,16 @@ header {
 
 .btnd h3{
     font-size: 1.7em;
+    color: rgb(197, 2, 2);
 }
 .btnd{
     position: fixed;
     margin: 0;
     left: 1em;
     top: 25em;
+}
+button{
+    color: white;
+    background-color: rgb(2, 105, 2);
+    border: rgb(0, 255, 0);
 }
