--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 @import url('https://fonts.googleapis.com/css?family=Secular One');
 @import url('https://fonts.googleapis.com/css?family=Shadows Into Light');
-@import url('https://fonts.googleapis.com/css?family=Comic Sans MS');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', 'Comic Sans MS', 'Secular One', 'Shadows Into Light' sans-serif, monospace
+    font-family: 'Poppins', 'Secular One', 'Shadows Into Light' sans-serif, monospace
 }
 body {
     display: flex;
@@ -67,6 +66,6 @@ header {
 }
 .timeout {
     color: rgb(19, 62, 255);
-    font-family: 'Comic Sans MS';
+    font-family: 'Poppins';
     font-size: 1.3em;
 }
