--- a/css/download.css
+++ b/css/download.css
@@ -59,5 +59,27 @@ header {
 
 .box-download{
     background-color: gray;
-    padding: 1px;
+    padding: 5px;
+    border-radius: 15%;
+    width: 300px;
+    height: 300px;
+}
+.box-download .links{
+    color: rgb(97, 201, 1);
+}
+
+.box-download a{
+    color: black;
+    text-decoration: none;
+    font-size: 1.3em;
+    text-align: justify;
+    margin-left: 60px;
+    padding: 5px;
+}
+
+.box-download h3{
+    text-decoration: none;
+    font-size: 1.3em;
+    text-align: justify;
+    margin-left: 80px;
 }
