--- a/css/download.css
+++ b/css/download.css
@@ -69,17 +69,26 @@ header {
 }
 
 .box-download a{
+    padding: 1em;
     color: black;
     text-decoration: none;
     font-size: 1.3em;
     text-align: justify;
-    margin-left: 60px;
-    padding: 5px;
+    margin-left: 50px;
+    
 }
 
 .box-download h3{
+    padding: 1em;
     text-decoration: none;
     font-size: 1.3em;
     text-align: justify;
-    margin-left: 80px;
+    margin-left: 70px;
+}
+a.d-1{
+    padding: 2em;
+}
+
+a.d-3{
+    padding:35px;
 }
