--- a/css/style.css
+++ b/css/style.css
@@ -61,11 +61,10 @@ header {
 }
 .countdown section {
     color: rgb(184, 197, 0);
-    font-family: 'Shadows Into Light';
-    font-size: 1.5em;
+    font-family: 'Secular One';
+    font-size: 1.3em;
 }
 .timeout {
     color: rgb(19, 62, 255);
-    font-family: 'Poppins';
     font-size: 1.3em;
 }
