--- a/css/download.css
+++ b/css/download.css
@@ -1,69 +1,25 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', 'Comic Sans MC', sans-serif
 }
-body {
+
+.contenedor {
+    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    background: url(../img/background2.jpg) no-repeat;
-    background-size: cover;
-    background-position: center
-}
-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 15px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 99;
-    border-radius: 20px;
-}
-.logo {
-    font-size: 2em;
-    color: rgb(161, 229, 250);
-    user-select: none
-}
-.navigation a {
-    position: relative;
-    font-size: 1.1em;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    font-weight: 400;
-    margin-left: 10px
-}
-.navigation a::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    width: 100%;
-    height: 3px;
-    background: white;
-    border-radius: 5px;
-    transform-origin: right;
-    transform: scaleX(0);
-    transition: transform .4s
-}
-.navigation a:hover::after {
-    transform-origin: left;
-    transform: scaleX(1)
-}
-
-.box-download{
+    min-height: 100vh; 
+  }
+  /*
+  .box-download {
     background-color: gray;
     padding: 5px;
     border-radius: 10%;
     width: 300px;
     height: 300px;
-}
+  }
+    
 .box-download .links{
     color: rgb(223, 255, 41);
 }
@@ -108,4 +64,63 @@ header {
   color: #fff; 
   text-align: center; 
   padding: 8px; 
+}
+
+*/
+/* Estilos para el contenedor general */
+.contenedor {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+/* Estilos para el div centrado */
+.box-download {
+  background-color: #f5f5f5;
+  padding: 10px;
+  border-radius: 10px;
+  width: 300px;
+  max-width: 90%;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.box-download h3 {
+  font-size: 1.2em;
+  text-align: center;
+}
+
+.box-download p {
+  font-size: 1em;
+  line-height: 1.6;
+  max-height: 200px;
+  overflow: auto;
+}
+
+.box-download a {
+  display: block;
+  padding: 10px;
+  background-color: #3498db;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  transition: background-color 0.2s;
+}
+
+.box-download a:hover {
+  background-color: #2980b9;
+}
+
+/* Estilos para el footer */
+.footer-css footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 8px;
 }
