--- a/css/home.style.css
+++ b/css/home.style.css
@@ -137,18 +137,53 @@ header {
   transform: translateX(calc(70px * 4));
 }
 
-/***CUSTOM CSS ***/
 body {
   background: var(--crl);
   color: gray;
 }
 
-.countdown section {
-  color: rgb(184, 197, 0);
-  font-family: 'Secular One';
-  font-size: 1.3em;
+.countdown {
+  text-align: center;
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  margin: 0 auto;
 }
-.timeout {
-  color: rgb(19, 62, 255);
-  font-size: 1.3em;
+
+.countdown p.timeout {
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+.countdown section p {
+  font-size: 1.5em;
+  margin: 0;
+}
+
+.countdown span {
+  font-size: 0.7em;
+  font-weight: bold;
+  padding: 2px;
+  background-color: #3498db;
+  color: #fff;
+  border-radius: 5px;
+}
+
+@media (max-width: 767px) {
+  .countdown {
+    max-width: 90%; 
+  }
+}
+
+.footer-css footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 8px;
 }
