--- a/css/home.style.css
+++ b/css/home.style.css
@@ -142,6 +142,11 @@ body {
   color: gray;
 }
 
+.info p{
+  font-size: 20px;
+  text-align: center;
+}
+
 .countdown {
   text-align: center;
   background-color: #f5f5f5;
@@ -171,12 +176,6 @@ body {
   border-radius: 5px;
 }
 
-@media (max-width: 767px) {
-  .countdown {
-    max-width: 90%; 
-  }
-}
-
 .footer-css footer {
   position: fixed;
   left: 0;
@@ -186,4 +185,33 @@ body {
   color: #fff;
   text-align: center;
   padding: 8px;
+}
+
+.info footer {
+  position: fixed;
+  left: 10%;
+  bottom: 0;
+  width: 80%;
+  background-color: #3c5a72;
+  color: rgb(184, 180, 194);
+  text-align: center;
+  padding: 8px;
+  border-radius: 10px;
+}
+
+@media (max-width: 767px) {
+  .countdown {
+    max-width: 90%; 
+  }
+
+  .info footer {
+    position: fixed;
+    left: 5%;
+    bottom: 0;
+    width: 90%;
+    background-color: #3c5a72;
+    color: rgb(163, 157, 157);
+    text-align: center;
+    padding: 8px;
+  }
 }
