--- a/css/home.style.css
+++ b/css/home.style.css
@@ -206,12 +206,13 @@ body {
 
   .info footer {
     position: fixed;
-    left: 5%;
+    left: 0;
     bottom: 0;
-    width: 90%;
+    width: 100%;
     background-color: #3c5a72;
     color: rgb(163, 157, 157);
     text-align: center;
     padding: 8px;
+    border-radius: 0;
   }
 }
