--- a/css/home.style.css
+++ b/css/home.style.css
@@ -142,11 +142,6 @@ body {
   color: gray;
 }
 
-.info p{
-  font-size: 20px;
-  text-align: center;
-}
-
 .countdown {
   text-align: center;
   background-color: #f5f5f5;
@@ -187,6 +182,7 @@ body {
   padding: 8px;
 }
 
+/*
 .info footer {
   position: fixed;
   left: 10%;
@@ -198,12 +194,14 @@ body {
   padding: 8px;
   border-radius: 10px;
 }
+*/
 
 @media (max-width: 767px) {
   .countdown {
     max-width: 90%; 
   }
 
+  /*
   .info footer {
     position: fixed;
     left: 0;
@@ -214,5 +212,5 @@ body {
     text-align: center;
     padding: 8px;
     border-radius: 0;
-  }
+  }*/
 }
