--- a/css/home.style.css
+++ b/css/home.style.css
@@ -17,7 +17,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 20vh;
+  min-height: 23vh;
 }
 
 .navigation {
@@ -182,35 +182,13 @@ body {
   padding: 8px;
 }
 
-/*
-.info footer {
-  position: fixed;
-  left: 10%;
-  bottom: 0;
-  width: 80%;
-  background-color: #3c5a72;
-  color: rgb(184, 180, 194);
-  text-align: center;
-  padding: 8px;
-  border-radius: 10px;
-}
-*/
-
 @media (max-width: 767px) {
   .countdown {
     max-width: 90%; 
   }
-
-  /*
-  .info footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #3c5a72;
-    color: rgb(163, 157, 157);
-    text-align: center;
-    padding: 8px;
-    border-radius: 0;
-  }*/
+  p{
+    color: rgb(127, 161, 170);
+  }
 }
+
+
