--- a/css/home.style.css
+++ b/css/home.style.css
@@ -24,7 +24,7 @@ header {
   position: relative;
   width: 2400px;
   height: 70px;
-  background: rgb(231, 231, 231);
+  background: rgb(130, 173, 173);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -144,7 +144,7 @@ body {
 
 .countdown {
   text-align: center;
-  background-color: #f5f5f5;
+  background-color: #dfdfdf;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
