--- a/css/home.style.css
+++ b/css/home.style.css
@@ -137,6 +137,14 @@ header {
   transform: translateX(calc(70px * 4));
 }
 
+.navigation ul li:nth-child(5).active ~ .indicator {
+  transform: translateX(calc(70px * 5));
+}
+
+.navigation ul li:nth-child(5).active ~ .indicator {
+  transform: translateX(calc(70px * 6));
+}
+
 body {
   background: var(--crl);
   color: gray;
